# vocal

./: LICENSE  README.md  pyproject.toml
vocal/: __init__.py  cli.py
