[project]
name = "vocal"
description = "A vocal source separation"
version = "0.0.5"
dependencies = ["tqdm", "torch", "numpy", "huggingface-hub", "click", "soundfile", "librosa"]

license = { file = "LICENSE" }
readme = "README.md"

classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.8',
]

[project.urls]
Homepage = "https://github.com/seanghay/vocal"
Repository = "https://github.com/seanghay/vocal"

[[project.authors]]
name = "Seanghay Yath"
email = "seanghay.dev@gmail.com"

[project.scripts]
vocali = "vocal:cli.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["vocal"]

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
ignore = ["E741"]
